# auto-version-action

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  UBIQUITOUS_LANGUAGE.md  action.yml  add_badges.py  cliff.toml  fix_add_badges.py  fix_add_badges_tests.py  fix_tests.py  mkdocs.yml  pyproject.toml  reproduce_bug.sh
.github/workflows/: add-badges.yml  auto-version.yml  codeql.yml  docs.yml  lint.yml  release.yml  tests.yml
auto-version/: action.yml  increment_version.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/architecture/: index.html
dev/assets/: metrics.json
dev/configuration/: index.html
dev/development/: index.html
dev/development/changelog/: index.html
dev/development/docstring-guide/: index.html
dev/development/versioning/: index.html
dev/en/: index.html
dev/en/api/: index.html
dev/en/architecture/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/metrics/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
dev/usage/: index.html
docs/: README.md  add-badges.md  auto-versioning.md  md-list-fixer.md
docs/assets/: metrics.json.bak
docs/de/: configuration.md  getting-started.md  index.md  installation.md  metrics.md  troubleshooting.md
docs/en/: configuration.md  getting-started.md  index.md  installation.md  metrics.md  troubleshooting.md
md-list-fixer/: action.yml  fix_md_lists.py
skills/: SKILL_coding.md  SKILL_docs.md
tests/: test_add_badges.py  test_increment_version.py  test_md_list_fixer.py  test_version_badge_logic.py
(+24 files in other folders)
