[project]
name = "auto-version-action"
version = "0.1.0"
description = "A collection of GitHub Actions for repository maintenance."
authors = [{ name = "Daniel Gaida" }]
license = { text = "MIT" }
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest", "pytest-mock"]

[tool.ruff]
line-length = 88

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
