[project]
name = "auto-version-action"
version = "0.2.7"
description = "A collection of GitHub Actions for repository maintenance."
requires-python = ">=3.11"
[[project.authors]]
name = "Daniel Gaida"

[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project.license]
text = "MIT"

[project.optional-dependencies]
test = [ "pytest", "pytest-mock", "pytest-cov",]

[tool.ruff]
line-length = 88

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
fail-under = 95
verbose = 1
exclude = [ "tests",]
